--- a/barang.html
+++ b/barang.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light h-100 p-2">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark h-100 p-2">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">LightStick</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,12 +25,25 @@
           </div>
         </div>
       </nav>    
-
+<style>
+    th{color: white;}
+    tr{color: white;}
+</style>
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <a class="btn btn-success ms-2 mt-5" href="create.html">Tambahkan Data Barang</a>
+                    <div class="row">
+                        <div class="col-4 me-auto mt-3 ms-2">
+                            <form class="mb-3">
+                                <div class="form-group d-flex">
+                                    <input type="text" class="resizedTextbox" name="cari" id="cari" placeholder="Mencari Data Barang" class="bg-light form-control me-3"/>
+                                    <button type="button" class="btn btn-primary ms-2 mt-2" onclick="getbyId(cari);">Cari</button>
+                                </div>
+                            </form>
+                        </div>  
+                    </div>
                     <table id="tbl" class="table table-striped">
                         <thead>
                             <tr>
@@ -85,11 +98,27 @@
             
         })
     }
-
+   
     function del(kode_barang){
         if (window.confirm("Yakin barang ingin dihapus?")===true) {
             axios.delete(`http://localhost:8080/data/barang/${kode_barang}`).then((result) => {
                 alert("Sukses")
+                window.location.href="/barang.html"
+            }).catch((err) => {
+                console.log(err)
+            });
+        }
+    }
+
+    function getbyId(kode_barang){
+        if (kode_barang=="") {
+            axios.getbyId(`http://localhost:8080/data/barang`).then((result) => {
+                window.location.href="/barang.html"
+            }).catch((err) => {
+                console.log(err)
+            });
+        } else{
+            axios.getbyId(`http://localhost:8080/data/barang/${kode_barang}`).then((result) => {
                 window.location.href="/barang.html"
             }).catch((err) => {
                 console.log(err)
