--- a/create.html
+++ b/create.html
@@ -21,13 +21,12 @@
             </div>
           </div>
         </div>
-      </nav>    
-
+      </nav>     
     <section>
         <div class="container">
-            <h4>Tambah Data Barang</h4>
+            <h4 style="text-align: center; color: white;">Tambah Data Barang</h4>
             <form>
-              <div class="row">
+              <div style="color: white;" class="row">
                   <div class="form-group my-3">
                     <label for="kode_barang" class="form-label">Kode Barang</label>
                     <input type="text" class="form-control" id="kode_barang" placeholder="Masukkan Kode Barang">
@@ -48,8 +47,8 @@
                     <label for="agensi" class="form-label">Agensi</label>
                     <input type="text" class="form-control" id="agensi" placeholder="Masukkan Agensi">
                   </div>
-                  <button type="button" class="btn btn-success ms-2 mt-4 col-5" onclick="saveData();">Simpan Data</button>
-                  <button type="button" class="btn btn-success ms-2 mt-4 col-5" onclick="return window.location.href='./barang.html';">Back</button>
+                  <button type="button" class="btn btn-success ms-2 mt-4 col-5" onclick="saveData(); return window.location.href='./barang.html';">Simpan Data</button>
+                  <button type="button" class="btn btn-danger ms-2 mt-4 col-5" onclick="return window.location.href='./barang.html';">Back</button>
             </div>  
             </form>
             </div>
