--- a/edit.html
+++ b/edit.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+  <!-- Tag meta untuk mengatur viewport, google signin -->
     <meta charset="UTF-8">
     <meta name="google-signin-client_id" content="532478157662-k748749dbf0i5f75ogn60aobpt88c0n6.apps.googleusercontent.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Tag di bawah ini, merupakan framework bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            <!-- Tag link untuk mengkoneksikan link2 atau file-file eksternal -->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index.js">
     <title>Toko LightStick</title>
 </head>
 <body>
+
+  <!-- Pada tag-tag dibawah ini, tag-tag ini berfungsi sebagai wadah untuk button sign out dan sebagai
+  navbar dari halaman edit -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark h-100 p-2">
         <div class="container-fluid">
+
+          <!-- Tag di bawah ini merupakan navigation bar untuk Lighstick -->
           <a class="navbar-brand" href="#">LightStick</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,38 +29,53 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto" data-onsuccess="onSignIn">
                 <div id="user"></div>
+                <!-- Button di bawah ini sebagai tombol sign out yang mana akan keluar dari akun kita -->
               <button type="button" class="btn btn-danger ms-2" onclick="signOut();">SignOut</button>
             </div>
           </div>
         </div>
       </nav>    
 
+      <!-- Pada section di bawah ini sebagai form untuk edit data. Terdapat form kode, nama, harga,
+      stock, agensi barang. -->
     <section>
         <div class="container">
+
+          <!-- Tag di bawah ini merupakan teks header 4, teks ini memiliki ukuran lebih kecil dibanding
+          dengan teks header 3, 2, ataupun 1  -->
             <h4 style="text-align: center;">Edit Data Barang</h4>
             <form>
               <div style="color: white;" class="row">
                   <div class="form-group my-3">
+
+                    <!-- Tag di bawah ini merupakan form dari Kode Barang -->
                     <label for="kode_barang" class="form-label">Kode Barang</label>
                     <input type="text" class="form-control" id="kode_barang" placeholder="Masukkan Kode Barang">
                   </div>
+                  <!-- Tag2 di bawah ini merupakan form dari Nama Barang -->
                   <div class="form-group my-3">
                     <label for="nama_barang" class="form-label">Nama Barang</label>
                     <input type="text" class="form-control" id="nama_barang" placeholder="Masukkan Nama Barang">
                   </div>
+                  <!-- Tag2 di bawah ini merupakan form dari Harga Barang -->
                   <div class="form-group my-3">
                     <label for="harga_barang" class="form-label">Harga Barang</label>
                     <input type="text" class="form-control" id="harga_barang" placeholder="Masukkan Harga Barang">
                   </div>
+                  <!-- Tag2 di bawah ini merupakan form dari Stock Barang -->
                   <div class="form-group my-3">
                     <label for="stock_barang" class="form-label">Stock Barang</label>
                     <input type="text" class="form-control" id="stock_barang" placeholder="Masukkan Stock Barang">
                   </div>
+                  <!-- Tag2 di bawah ini merupakan form dari Agensi yang menaungi barang-barang -->
                   <div class="form-group my-3">
                     <label for="agensi" class="form-label">Agensi</label>
                     <input type="text" class="form-control" id="agensi" placeholder="Masukkan Agensi">
                   </div>
+
+                  <!-- Button di bawah ini berfungsi untuk menyimpan data -->
                   <button type="button" class="btn btn-success ms-2 mt-4 col-5" onclick="saveData(); return window.location.href='./barang.html';">Simpan Data</button>
+                  <!-- Button di bawah ini berfungsi untuk kembali ke halaman sebelumnya -->
                   <button type="button" class="btn btn-danger ms-2 mt-4 col-5" onclick="return window.location.href='./barang.html';">Back</button>
             </div>  
             </form>
@@ -58,8 +83,11 @@
         </div>
     </section>
 
+    <!-- Tag script berguna untuk memanggil atau menghubungkan 
+        dengan file-file yang berkaitan dengan Javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+      <!-- Script untuk menghubungkan dengan file service.js -->
     <script src="service.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
     <script>
@@ -83,6 +111,7 @@
         })
     }
 
+     // Function di bawah ini merupakan bagian dari kode, nama, harga, stok, dan agensi barang
     function saveData(){
     var body = {
       kode_barang:$("#kode_barang").val(),
@@ -91,6 +120,9 @@
       stock_barang:$("#stock_barang").val(),
 			agensi:$("#agensi").val()
     }
+
+    // Pada kode-kode di bawah ini, disaat kita mengubah data. Saat kita klik simpan,
+    // nantinya akan memberikan informasi bahwa data berhasil di ubah
     var json = JSON.stringify(body)
     console.log(json)
     axios({
@@ -105,6 +137,7 @@
         console.log(error)
     });
 }
+// Data kode-kode dibawah ini sebagai get data dengan tabel kode, nama, harga, stock, dan agensi
     function getData(){
         var url = new URL($(location).attr("href"))
         var params = url.searchParams.get("kode_barang")
